decompiler/tests/snapshots/test_tool__x86_64_callconv__func107.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  64 instrs
    0 r12: UnknownUnsized <- Ancestral(AncestralName("stack_bottom"))
    1 r2: UnknownUnsized <- Ancestral(AncestralName("CF"))
    2 r3: UnknownUnsized <- Ancestral(AncestralName("PF"))
    3 r4: UnknownUnsized <- Ancestral(AncestralName("AF"))
    4 r5: UnknownUnsized <- Ancestral(AncestralName("ZF"))
    5 r6: UnknownUnsized <- Ancestral(AncestralName("SF"))
    6 r7: UnknownUnsized <- Ancestral(AncestralName("TF"))
    7 r8: UnknownUnsized <- Ancestral(AncestralName("IF"))
    8 r9: UnknownUnsized <- Ancestral(AncestralName("DF"))
    9 r10: UnknownUnsized <- Ancestral(AncestralName("OF"))
   10 r11: UnknownUnsized <- Ancestral(AncestralName("RBP"))
   11 r12: UnknownUnsized <- Ancestral(AncestralName("RSP"))
   12 r13: UnknownUnsized <- Ancestral(AncestralName("RIP"))
   13 r14: UnknownUnsized <- Ancestral(AncestralName("RDI"))
   14 r15: UnknownUnsized <- Ancestral(AncestralName("RSI"))
   15 r16: UnknownUnsized <- Ancestral(AncestralName("RAX"))
   16 r17: UnknownUnsized <- Ancestral(AncestralName("RBX"))
   17 r18: UnknownUnsized <- Ancestral(AncestralName("RCX"))
   18 r19: UnknownUnsized <- Ancestral(AncestralName("RDX"))
   19 r20: UnknownUnsized <- Ancestral(AncestralName("R8"))
   20 r21: UnknownUnsized <- Ancestral(AncestralName("R9"))
   21 r22: UnknownUnsized <- Ancestral(AncestralName("R10"))
   22 r23: UnknownUnsized <- Ancestral(AncestralName("R11"))
   23 r24: UnknownUnsized <- Ancestral(AncestralName("R12"))
   24 r25: UnknownUnsized <- Ancestral(AncestralName("R13"))
   25 r26: UnknownUnsized <- Ancestral(AncestralName("R14"))
   26 r27: UnknownUnsized <- Ancestral(AncestralName("R15"))
   27 r28: UnknownUnsized <- Ancestral(AncestralName("ZMM0"))
   28 r29: UnknownUnsized <- Ancestral(AncestralName("ZMM1"))
   29 r30: UnknownUnsized <- Ancestral(AncestralName("ZMM2"))
   30 r31: UnknownUnsized <- Ancestral(AncestralName("ZMM3"))
   31 r32: UnknownUnsized <- Ancestral(AncestralName("ZMM4"))
   32 r33: UnknownUnsized <- Ancestral(AncestralName("ZMM5"))
   33 r34: UnknownUnsized <- Ancestral(AncestralName("ZMM6"))
   34 r35: UnknownUnsized <- Ancestral(AncestralName("ZMM7"))
   35 r36: UnknownUnsized <- Ancestral(AncestralName("ZMM8"))
   36 r37: UnknownUnsized <- Ancestral(AncestralName("ZMM9"))
   37 r38: UnknownUnsized <- Ancestral(AncestralName("ZMM10"))
   38 r39: UnknownUnsized <- Ancestral(AncestralName("ZMM11"))
   39 r40: UnknownUnsized <- Ancestral(AncestralName("ZMM12"))
   40 r41: UnknownUnsized <- Ancestral(AncestralName("ZMM13"))
   41 r42: UnknownUnsized <- Ancestral(AncestralName("ZMM14"))
   42 r43: UnknownUnsized <- Ancestral(AncestralName("ZMM15"))
   43 r45: UnknownUnsized <- Ancestral(AncestralName("arg0"))
   44 r14: UnknownUnsized <- Get(r45)
   45 r46: UnknownUnsized <- Ancestral(AncestralName("arg1"))
   46 r15: UnknownUnsized <- Get(r46)
   47 r47: UnknownUnsized <- Ancestral(AncestralName("arg2"))
   48 r19: UnknownUnsized <- Get(r47)
   49 r48: UnknownUnsized <- Ancestral(AncestralName("arg3"))
   50 r49: UnknownUnsized <- Part { src: r48, offset: 0, size: 8 }
   51 r18: UnknownUnsized <- Get(r49)
   52 r50: UnknownUnsized <- Part { src: r48, offset: 8, size: 8 }
   53 r20: UnknownUnsized <- Get(r50)
0x40132f:
   54 r46: UnknownUnsized <- Const { value: 33, size: 8 }
   55 r46: UnknownUnsized <- Arith(Add, r46, r12)
   56 r45: UnknownUnsized <- LoadMem { addr: r46, size: 1 }
   57 r47: UnknownUnsized <- Part { src: r16, offset: 1, size: 7 }
   58 r16: UnknownUnsized <- Concat { lo: r45, hi: r47 }
0x401333:
   59 r45: UnknownUnsized <- Void
   60 r45: UnknownUnsized <- Concat { lo: r45, hi: r16 }
   61 r45: UnknownUnsized <- Part { src: r45, offset: 0, size: 1 }
   62 r47: UnknownUnsized <- SetReturnValue(r45)
   63 r47: UnknownUnsized <- Control(Ret)


 --- ssa pre-xform
ssa program  64 instrs
.B0:    ;;  → Always(Return).
         r11: unknown <UnknownUnsized> <- Ancestral(AncestralName("RSP"))
         r15: unknown <UnknownUnsized> <- Ancestral(AncestralName("RAX"))
         r54: unknown <UnknownUnsized> <- Const { value: 33, size: 8 }
         r55: unknown <UnknownUnsized> <- Arith(Add, r54, r11)
         r56: unknown <UnknownUnsized> <- LoadMem { addr: r55, size: 1 }
         r57: unknown <UnknownUnsized> <- Part { src: r15, offset: 1, size: 7 }
         r58: unknown <UnknownUnsized> <- Concat { lo: r56, hi: r57 }
         r60: unknown <UnknownUnsized> <- Concat { lo: r59, hi: r58 }
         r61: unknown <UnknownUnsized> <- Part { src: r60, offset: 0, size: 1 }
         r62: unknown <UnknownUnsized> <- SetReturnValue(r61)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r55, r56, r62]
  domtree:
    BlockID(0)

 --- ssa
ssa program  64 instrs
.B0:    ;;  → Always(Return).
         r11: unknown <UnknownUnsized> <- Ancestral(AncestralName("RSP"))
         r55: unknown <UnknownUnsized> <- ArithK(Add, r11, 33)
         r56: unknown <UnknownUnsized> <- LoadMem { addr: r55, size: 1 }
         r62: unknown <UnknownUnsized> <- SetReturnValue(r56)


 --- ast

T0: {
  ;
  return [pre:RSP + 33]:1
}
