decompiler/tests/snapshots/test_tool__x86_64_callconv__func110.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func110 0x40133e+5 (file 0x133e)
          40133e: 8a 44 24 08             mov al,[rsp+8]
          401342: c3                      ret

function type: "func110" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 *void <TypeID(1v1)>,
                               arg3 *void <TypeID(1v1)>,
                               arg4 small <TypeID(784v1)>,
                               arg5 char <TypeID(778v1)>) char <TypeID(778v1)>
0 warnings.


mil program = 
program  91 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r45 <- Undefined
                44 r46 <- Undefined
                45 r47 <- Undefined
                46 r48 <- Undefined
                47 r49 <- Undefined
                48 r50 <- Undefined
                49 r51 <- Undefined
                50 r52 <- Undefined
                51 r53 <- Undefined
                52 r54 <- Undefined
                53 r55 <- Undefined
                54 r56 <- Undefined
                55 r57 <- Undefined
                56 r58 <- Undefined
                57 r59 <- Undefined
                58 r60 <- Undefined
                59 r61 <- Undefined
                60 r62 <- Undefined
                61 r63 <- Undefined
                62 r64 <- Undefined
                63 r65 <- Undefined
                64 r45 <- Ancestral(AncestralName("arg0"))
                65 r14 <- Get(r45)
                66 r46 <- Ancestral(AncestralName("arg1"))
                67 r15 <- Get(r46)
                68 r47 <- Ancestral(AncestralName("arg2"))
                69 r19 <- Get(r47)
                70 r48 <- Ancestral(AncestralName("arg3"))
                71 r18 <- Get(r48)
                72 r49 <- Ancestral(AncestralName("arg4"))
                73 r50 <- Part { src: r49, offset: 0, size: 8 }
                74 r20 <- Get(r50)
                75 r51 <- Part { src: r49, offset: 8, size: 8 }
                76 r21 <- Get(r51)
                77 r52 <- Ancestral(AncestralName("arg5"))
                78 r54 <- Part { src: r52, offset: 0, size: 1 }
                79 r53 <- ArithK(Add, r12, 8)
                80 r53 <- StoreMem { addr: r53, value: r54 }
0x40133e:
                81 r46 <- Const { value: 8, size: 8 }
                82 r46 <- Arith(Add, r46, r12)
                83 r45 <- LoadMem { addr: r46, size: 1 }
                84 r47 <- Part { src: r16, offset: 1, size: 7 }
                85 r16 <- Concat { lo: r45, hi: r47 }
0x401342:
                86 r45 <- Void
                87 r45 <- Concat { lo: r45, hi: r16 }
                88 r45 <- Part { src: r45, offset: 0, size: 1 }
                89 r47 <- SetReturnValue(r45)
                90 r47 <- Control(Ret)


ssa pre-xform:
ssa program  91 instrs
.B0:    ;;  → Always(Return).
  (  2)  r11 <- Ancestral(AncestralName("RSP"))
         r15 <- Ancestral(AncestralName("RAX"))
         r77 <- Ancestral(AncestralName("arg5"))
         r78 <- Part { src: r77, offset: 0, size: 1 }
         r79 <- ArithK(Add, r11, 8)
         r80 <- StoreMem { addr: r79, value: r78 }
         r81 <- Const { value: 8, size: 8 }
         r82 <- Arith(Add, r81, r11)
         r83 <- LoadMem { addr: r82, size: 1 }
         r84 <- Part { src: r15, offset: 1, size: 7 }
         r85 <- Concat { lo: r83, hi: r84 }
         r87 <- Concat { lo: r86, hi: r85 }
         r88 <- Part { src: r87, offset: 0, size: 1 }
         r89 <- SetReturnValue(r88)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r15, r77, r78, r79, r80, r81, r82, r83, r84, r85, r86, r87, r88, r89]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  96 instrs
.B0:    ;;  → Always(Return).
         r11 <- Ancestral(AncestralName("RSP"))
  (  2)  r77 <- Ancestral(AncestralName("arg5"))
         r79 <- ArithK(Add, r11, 8)
         r80 <- StoreMem { addr: r79, value: r77 }
         r89 <- SetReturnValue(r77)



T0: {
  [pre:RSP + 8]:* := pre:arg5;
  ;
  return pre:arg5
}
