decompiler/tests/snapshots/test_tool__x86_64_callconv__func114.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  69 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r14: TypeID(2v1) <- Get(r45)
   45 r46: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   46 r15: TypeID(2v1) <- Get(r46)
   47 r47: TypeID(2v1) <- Ancestral(AncestralName("arg2"))
   48 r19: TypeID(2v1) <- Get(r47)
   49 r48: TypeID(2v1) <- Ancestral(AncestralName("arg3"))
   50 r18: TypeID(2v1) <- Get(r48)
   51 r49: TypeID(2v1) <- Ancestral(AncestralName("arg4"))
   52 r50: TypeID(2v1) <- Part { src: r49, offset: 0, size: 8 }
   53 r20: TypeID(2v1) <- Get(r50)
   54 r51: TypeID(2v1) <- Part { src: r49, offset: 8, size: 8 }
   55 r21: TypeID(2v1) <- Get(r51)
   56 r52: TypeID(2v1) <- Ancestral(AncestralName("arg5"))
   57 r54: TypeID(2v1) <- Part { src: r52, offset: 0, size: 8 }
   58 r53: TypeID(2v1) <- ArithK(Add, r12, 8)
   59 r53: TypeID(2v1) <- StoreMem { addr: r53, value: r54 }
0x401354:
   60 r46: TypeID(2v1) <- Const { value: 8, size: 8 }
   61 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   62 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 8 }
   63 r16: TypeID(2v1) <- Get(r45)
0x401359:
   64 r45: TypeID(2v1) <- Void
   65 r45: TypeID(2v1) <- Concat { lo: r45, hi: r16 }
   66 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   67 r47: TypeID(2v1) <- SetReturnValue(r45)
   68 r47: TypeID(2v1) <- Control(Ret)


 --- ssa pre-xform
ssa program  69 instrs
.B0:    ;;  → Always(Return).
  (  2)  r11: ? <- Ancestral(AncestralName("RSP"))
         r56: ? <- Ancestral(AncestralName("arg5"))
         r57: ? <- Part { src: r56, offset: 0, size: 8 }
         r58: ? <- ArithK(Add, r11, 8)
         r59: ? <- StoreMem { addr: r58, value: r57 }
         r60: ? <- Const { value: 8, size: 8 }
         r61: ? <- Arith(Add, r60, r11)
         r62: ? <- LoadMem { addr: r61, size: 8 }
         r65: ? <- Concat { lo: r64, hi: r62 }
         r66: ? <- Part { src: r65, offset: 0, size: 8 }
         r67: ? <- SetReturnValue(r66)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r56, r58, r59, r67]
  domtree:
    
 --- ssa
ssa program  74 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
  (  2)  r56: ? <- Ancestral(AncestralName("arg5"))
         r58: ? <- ArithK(Add, r11, 8)
         r59: ? <- StoreMem { addr: r58, value: r56 }
         r67: ? <- SetReturnValue(r56)


 --- ast

T0: {
  [pre:RSP + 8]:* := pre:arg5;
  ;
  return pre:arg5
}
